feat: implement CreateSensor endpoint
