# internal/resources/sensors.go
@@ -5,46 +5,47 @@ import (
 	"log/slog"
 
 	api "github.com/naceto/tempstation/internal/generated/api/sensors"
+	"github.com/naceto/tempstation/internal/resources/convert"
 	"github.com/naceto/tempstation/internal/storage"
 )
 
 var _ api.StrictServerInterface = &Sensors{}
 
 type Sensors struct {
-	log   *slog.Logger
-	store storage.Storage
+	log     *slog.Logger
+	convert convert.Convert
+	store   storage.Storage
 }
 
-func NewSensors(log *slog.Logger, store storage.Storage) *Sensors {
+func NewSensors(log *slog.Logger, convert convert.Convert, store storage.Storage) *Sensors {
 	return &Sensors{
-		log:   log,
-		store: store,
+		log:     log,
+		convert: convert,
+		store:   store,
 	}
 }
 
 // (GET /v1/sensors)
 func (s *Sensors) GetV1Sensors(ctx context.Context, request api.GetV1SensorsRequestObject) (api.GetV1SensorsResponseObject, error) {
-	// TODO: use goverter generated converters to convert from internal models to api models
-	resp := api.GetV1Sensors200JSONResponse{
-		SensorsDataResponseJSONResponse: api.SensorsDataResponseJSONResponse{
-			Sensors: []api.SensorData{
-				{},
-			},
-		},
+	params := s.convert.ListSensorsAPIToStorage(request)
+	sensors, err := s.store.ListSensors(ctx, params)
+	if err != nil {
+		s.log.Error("resources.GetV1Sensors", "store.ListSensors error", err)
+		return nil, err
 	}
 
-	return resp, nil
+	response := s.convert.ListSensorsAPIFromStorage(sensors)
+	return response, nil
 }
 
 // (POST /v1/sensors)
 func (s *Sensors) PostV1Sensors(ctx context.Context, request api.PostV1SensorsRequestObject) (api.PostV1SensorsResponseObject, error) {
-	// TODO: use goverter generated converters to convert from internal models to api models
-	return api.PostV1Sensors200JSONResponse{
-		SensorResponseJSONResponse: api.SensorResponseJSONResponse{
-			Id:   request.Body.UserId,
-			Mac:  request.Body.Mac,
-			Name: request.Body.Name,
-			Type: request.Body.Type,
-		},
-	}, nil
+	sensorModel := s.convert.PostSensorsAPIToStorage(request)
+	sensor, err := s.store.CreateSensor(ctx, sensorModel)
+	if err != nil {
+		return nil, err
+	}
+
+	response := s.convert.PostSensorAPIFromStorage(sensor)
+	return response, nil
 }
