# web/sensors/openapi.yaml
@@ -11,9 +11,22 @@ paths:
     get:
       tags:
         - sensors
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            format: int32
+          description: The number of items to skip before starting to collect the result set
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            format: int32
+          description: The numbers of items to return
       responses:
         "200":
-          $ref: "#/components/responses/SensorsDataResponse"
+          $ref: "#/components/responses/SensorsResponse"
         "400":
           $ref: "../common/openapi.yaml#/components/responses/ErrorResponse"
         "500":
@@ -41,6 +54,13 @@ components:
             $ref: "#/components/schemas/SensorPost"
 
   responses:
+    SensorsResponse:
+      description: List of sensors.
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/SensorsResponse"
+
     SensorResponse:
       description: Sensor info.
       content:
@@ -96,6 +116,17 @@ components:
           type: string
         type:
           $ref: "#/components/schemas/SensorType"
+
+    SensorsResponse:
+      type: object
+      description: List of sensors.
+      required:
+        - sensors
+      properties:
+        sensors:
+          type: array
+          items:
+            $ref: "#/components/schemas/Sensor"
 
     SensorType:
       description: Sensor type.
